--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "helmet": "^4.6.0",
     "mongoose": "^6.1.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
