--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest ",
-    "test:watch": "jest --runInBand --detectOpenHandles --watch",
-    "test:cov": "jest --runInBand --detectOpenHandles --coverage",
+    "test": "cross-env MONGODB_REPO_CONNECTION=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles",
+    "test:watch": "cross-env MONGODB_REPO_CONNECTION=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles --watch",
+    "test:cov": "cross-env MONGODB_REPO_CONNECTION=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles"
   },
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cross-env": "^7.0.3",
     "helmet": "^4.6.0",
     "mongoose": "^6.1.4",
     "passport": "^0.5.2",
@@ -56,7 +57,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
-    "mongodb-memory-server": "^8.1.0",
+    "mongo-unit": "^2.0.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
