--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "cross-env MONGODB_REPO_CONNECTION=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles",
-    "test:watch": "cross-env MONGODB_REPO_CONNECTION=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles --watch",
-    "test:cov": "cross-env MONGODB_REPO_CONNECTION=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles --coverage",
+    "test": "cross-env MONGODB_URI=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles",
+    "test:watch": "cross-env MONGODB_URI=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles --watch",
+    "test:cov": "cross-env MONGODB_URI=\"mongodb://127.0.0.1:27019\" jest --runInBand --detectOpenHandles --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles"
+    "test:e2e": "cross-env MONGODB_URI=\"mongodb://127.0.0.1:27019\" jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -50,6 +50,7 @@
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/password-hash": "^1.2.21",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
