--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "cross-env MONGODB_URI=\"mongodb://127.0.0.1:27018\" jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles"
   },
   "dependencies": {
+    "@casl/ability": "^5.4.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
